cmake_minimum_required(VERSION 3.9)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(leetcode main.cpp 1-TwoSum.h 2-AddTwoNumbers.h LeetGod.h 283-MoveZeros.h 27-RemoveElement.h 26-RemoveDuplicates.h 80-RemoveDuplicates.h 75-SortColors.h 88-MergeSortedArray.h 215-KthLargestElement.h 167-TwoSum-II.h 125-ValidPalindrome.h 344-ReverseString.h 345-ReverseVowels.h 11-ContainerWithMostWater.h 3-LongestSubstring.h 209-MinimumSizeSubarraySum.h 438-FindAnagrams.h 76-MinimumWindowSubstring.h 349-Intersection.h 350-Intersect.h 242-IsAnagram.h 202-HappyNumber.h 290-WordPattern.h 205-IsomorphicStrings.h 451-SortCharacters.h 15-3sum.h 18-4Sum.h 16-3SumClosest.h 454-4SUM-II.h 49-GroupAnagrams.h 447-NumberOfBoomerangs.h 149-MaxPoints.h)